# rdiff_trimmer

./: .gitignore  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  build_in_docker.sh  pyproject.toml  run_tests.sh  setup.py
debian/: changelog  control  rules
src/rdiff_trimmer/: __init__.py  keep_only_specified_backups.py  rdiff_api.py  trimmer.py  unpack_rdiff_increments.py
src/rsync_trimmer/: keep_only_specified_backups.py
tests/: test_rdiff_api.py
tests/test_data/: content
tests/test_data/rdiff-backup-data/: current_mirror.2018-04-21T22:30:05+02:00.data  current_mirror.2026-02-11T17:55:42+01:00.data  session_statistics.2018-04-21T20:53:38+02:00.data  session_statistics.2018-04-21T22:29:51+02:00.data  session_statistics.2018-04-21T22:30:05+02:00.data  session_statistics.2026-02-11T17:55:42+01:00.data
